# homework-system

./: .gitignore  start-backend.bat
backend/: .env.example  auth.py  drive.py  get_google_token.py  main.py  pyproject.toml  requirements.txt  settings.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/pages/: StudentDashboard.tsx  StudentLogin.tsx  TeacherDashboard.tsx
